java-plugin/src/test/cases/error/ReturnAssignment6-13-22.java
import io.github.miracelwhipp.constness.annotation.Const;
import io.github.miracelwhipp.constness.annotation.PreservesConst;


class ReturnAssignment {

    @Const
    private Object object() { return null;};

    @PreservesConst
    public Object getObject() {

        return object(); // compile error
    }

}